--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  position: fixed;
 }
 
 .logoContainer {
@@ -25,7 +26,9 @@
 }
 
 .resumeText {
-  // font-family: ;
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .toggler {
