--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -26,7 +26,7 @@
 }
 
 .resumeText {
-  font-family: 'Inter';
+ 
   font-weight: 400;
   font-size: 16px;
 }
@@ -37,5 +37,20 @@
 }
 
 .toggler:hover {
+  cursor: pointer;
+}
+
+.helloButton {
+  width: 150px;
+  border-radius: 35px;
+  height: 35px;
+  border: 2px  solid;
+  margin: 0 30px 0 50px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.helloButton:hover {
   cursor: pointer;
 }
