--- a/src/screens/HomeScreen/styles.module.scss
+++ b/src/screens/HomeScreen/styles.module.scss
@@ -11,19 +11,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 85vh;
 }
 
 
 .jobHeader {
-  font-family: 'Inter';
+  margin-top: 30px;
   font-weight: 700;
   font-size: 30px;
   text-align: center;
 }
 
 .jobdesc {
-  font-family: 'Inter';
+  margin-top: 10px;
   font-weight: 400;
   font-size: 15px;
   text-align: center;
@@ -32,7 +32,7 @@
 .profileImg {
   width: 110px;
   height: 110px;
-  margin-bottom: 50px;
+  margin: 50px;
 }
 
 .technologyImage {
@@ -49,14 +49,14 @@
 }
 
 .nameText {
-  font-family: 'Inter';
+  margin: 40px;
   font-weight: 700;
   font-size: 25px;
   text-align: center;
 }
 
 .introText {
-  font-family: 'Inter';
+  margin: 0 20px 20px 20px; 
   font-weight: 400;
   font-size: 20px;
   text-align: center;
@@ -70,15 +70,43 @@
 }
 
 .skillsHeader {
-  font-family: 'Inter';
+  margin: 30px;
   font-weight: 700;
   font-size: 25px;
   text-align: center;
 }
 
 .skillsDesc {
-  font-family: 'Inter';
+ 
   font-weight: 400;
-  font-size: 20px;
+  font-size: 15px;
   text-align: center;
+}
+
+.collaborateSction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.collaborateHeader {
+  margin: 30px;
+  font-weight: 700;
+  font-size: 25px;
+  text-align: center;
+}
+
+.collaborateDesc {
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+}
+
+.collaborateAction {
+
+}
+
+.actionText {
+  
 }
