add flipCard component

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   position: fixed;
+  z-index: 10000;
 }
 
 .logoContainer {
