--- a/src/screens/HomeScreen/styles.module.scss
+++ b/src/screens/HomeScreen/styles.module.scss
@@ -87,11 +87,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 96%;
+  padding: 3% 2% 3% 2%;
 }
 
 .collaborateHeader {
-  margin: 30px;
+  margin: 30px 30px 20px 30px;
   font-weight: 700;
   font-size: 25px;
   text-align: center;
@@ -101,17 +102,53 @@
   font-weight: 400;
   font-size: 15px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .collaborateAction {
+  margin: 30px 0 30px 0;
+  width: 16%;
+  border-radius: 2vw;
+  text-align: center;
+  padding: 1vw;
+}
 
+.collaborateAction:hover {
+  cursor: pointer;
 }
 
 .actionText {
-  
+  font-weight: 700;
+  font-size: 13px;
 }
 
-.cssblaa {
-  margin: auto;
-  padding: 0;
+.recentWorkSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 96%;
+  padding: 4% 2% 5% 2%;
+}
+
+.emailMeText {
+  color: blueviolet,
+}
+
+.emailMeText:hover {
+  cursor: pointer;
+}
+
+.recentWorkCardsContainer {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+}
+
+.TestimonialsScetion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
 }
