--- a/src/components/foorter/styles.module.scss
+++ b/src/components/foorter/styles.module.scss
@@ -1,10 +1,10 @@
 .footerContainer {
   height: 28vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: space-between;
   padding: 4% 0 4% 0;
 }
 
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
 }
 
 .logo {
