--- a/src/screens/HomeScreen/skillsComponent/styles.module.scss
+++ b/src/screens/HomeScreen/skillsComponent/styles.module.scss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 70px;
+  padding: 70px 0 70px 0;
+  width: 100%;
 }
 
 .skillsHeader {
