--- a/src/screens/HomeScreen/testimonialsComponent/styles.module.scss
+++ b/src/screens/HomeScreen/testimonialsComponent/styles.module.scss
@@ -6,3 +6,14 @@
   width: 100%;
 
 }
+
+.testimonialsHeader {
+  margin: 100px 0 20px 0;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 29px;
+}
+
+.testimonialsDesc {
+  font-size: 12px;
+}
