--- a/src/screens/HomeScreen/introductionComponent/styles.module.scss
+++ b/src/screens/HomeScreen/introductionComponent/styles.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   padding: 70px;
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    padding: 10px;
+  }
 }
 
 .nameText {
@@ -10,6 +14,10 @@
   font-weight: 700;
   font-size: 25px;
   text-align: center;
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    font-size: 20px;
+  }
 }
 
 .introText {
