--- a/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
+++ b/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
@@ -20,4 +20,9 @@
   width: 90%;
   display: flex;
   justify-content: center;
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    width: 100%;
+    flex-direction: column;
+  }
 }
