--- a/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
+++ b/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../../global.scss";
+
 .recentWorkSection {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,8 @@
   width: 90%;
   display: flex;
   justify-content: center;
-  @media only screen and (max-width: 768px) {
+  flex-direction: row;
+  @include phone {
     /* For mobile phones: */
     width: 100%;
     flex-direction: column;
