--- a/src/screens/HomeScreen/testimonialsComponent/testimonialCard/styles.module.scss
+++ b/src/screens/HomeScreen/testimonialsComponent/testimonialCard/styles.module.scss
@@ -1,8 +1,9 @@
 .TestimonialsCardContainer{
   height: 240px;
-  border: 1px solid #F2F2F2;
+  border: 2px solid #F2F2F2;
   width: 27vw;
   border-radius: 5px;
+  box-shadow: 1px black;
   background-size: cover;
   background-position: right bottom;
   background-repeat: no-repeat;
