--- a/src/components/sideNav/styles.module.scss
+++ b/src/components/sideNav/styles.module.scss
@@ -5,7 +5,7 @@
 }
 
 .navContainer {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -17,7 +17,7 @@
   z-index: 1000;
   transition: transform 250ms ease-in-out;
   transform: translateX(var(--sidenav-translate-x));
-  padding: 32px 0 0 5px;
+  padding: 32px 0 0 0;
   @include pc {
     --sidenav-translate-x: -300px;
     padding-left: 0px;
