--- a/src/screens/HomeScreen/testimonialsComponent/styles.module.scss
+++ b/src/screens/HomeScreen/testimonialsComponent/styles.module.scss
@@ -1,4 +1,6 @@
 
+@import "../../../global.scss";
+
 .TestimonialsScetion {
   display: flex;
   flex-direction: column;
@@ -16,4 +18,16 @@
 
 .testimonialsDesc {
   font-size: 12px;
+}
+
+.carousalContainer {
+  margin: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 80%;
+  @include phone {
+    /* For mobile phones: */
+    width: 100%;
+    margin: 0;
+  }
 }
