--- a/src/screens/HomeScreen/skillsComponent/styles.module.scss
+++ b/src/screens/HomeScreen/skillsComponent/styles.module.scss
@@ -1,3 +1,4 @@
+@import "../../../global.scss";
 
 .skillsSection {
   display: flex;
@@ -21,3 +22,39 @@
   text-align: center;
 }
 
+@mixin n-columns($min-width, $gutter, $last-equal: false, $max-cols: 6) {
+  .items {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -$gutter;
+    margin-top: $gutter;
+    justify-content: center;
+
+    .item {
+      flex: 1 0 $min-width;
+      margin-left: $gutter;
+      margin-top: $gutter;
+
+      @if $last-equal {
+        @for $i from 2 through $max-cols {
+          $screen-width: ($min-width*$i)+($gutter*$i);
+          $column-width: (100%/$i);
+          @media (min-width: $screen-width) {
+            max-width: calc(#{$column-width} - #{$gutter});
+          }
+        }
+    
+        $column-width: (100%/$max-cols);
+        @media (min-width: $min-width*$max-cols) {
+            min-width: calc(#{$column-width} - #{$gutter});
+        }
+      }
+
+      @include phone {
+        flex: none;
+      }
+    }
+  }
+}
+
+@include n-columns(200px,  30px, true, 6);
