--- a/src/components/ProjectsComponent/styles.module.scss
+++ b/src/components/ProjectsComponent/styles.module.scss
@@ -1,6 +1,7 @@
 .cardImage {
   width: 100%;
   height: 100%;
+  border-radius: 12px;
 }
 
 .BackCardContainer {
@@ -25,6 +26,10 @@
 .readMoreText {
   position: absolute;
   bottom: 0
+}
+
+.readMoreText:hover {
+  cursor: pointer;
 }
 
 
