--- a/src/components/sideNav/styles.module.scss
+++ b/src/components/sideNav/styles.module.scss
@@ -26,3 +26,23 @@
 .navBarContainer {
   margin-top: 30px;
 }
+
+.navContentContainer {
+  margin-top: 50px;
+  margin-left: 20px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.navItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.navItemText {
+  font-size: 20px;
+  margin-left: 15px;
+}
