--- a/src/screens/HomeScreen/introductionComponent/styles.module.scss
+++ b/src/screens/HomeScreen/introductionComponent/styles.module.scss
@@ -17,6 +17,7 @@
   @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     font-size: 20px;
+    margin: 40px 20px 40px 20px;
   }
 }
 
