--- a/src/components/foorter/styles.module.scss
+++ b/src/components/foorter/styles.module.scss
@@ -1,10 +1,12 @@
+@import "../../global.scss";
+
 .footerContainer {
-  height: 28vh;
+  height: auto;
   width: 100%;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   padding: 4% 0 4% 0;
 }
 
@@ -27,6 +29,10 @@
   font-weight: 400;
   font-size: 17px;
   text-align: center;
+  margin-bottom: 70px;
+  @include phone {
+    margin-bottom: 15px;
+  }
 }
 
 .socialMediaContainer {
@@ -34,13 +40,19 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  opacity: 0;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
 }
 
 .socialIconsContainer {
   display: flex;
   justify-content: space-between;
   width: 250px;
-
 }
 
 .cerditsText {
@@ -58,4 +70,27 @@
 
 .socialLink:hover {
   cursor: pointer;
+}
+
+
+@keyframes fadeInUp {
+  from {
+      transform: translate3d(0,40px,0)
+  }
+
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+      transform: translate3d(0,40px,0)
+  }
+
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+  }
 }
