--- a/src/screens/HomeScreen/jobTitleComponent/styles.module.scss
+++ b/src/screens/HomeScreen/jobTitleComponent/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../../global.scss";
+
 .jobTitleContainer {
   display: flex;
   flex-direction: column;
@@ -27,9 +29,12 @@
 }
 
 .technologyImage {
-  width: 25%;
+  width: 30%;
   min-width: 300px;
   height: auto;
   margin: 0 auto;
+  @include phone {
+    max-height: 30vh;
+  }
 }
 
