--- a/src/screens/HomeScreen/testimonialsComponent/testimonialCard/styles.module.scss
+++ b/src/screens/HomeScreen/testimonialsComponent/testimonialCard/styles.module.scss
@@ -1,5 +1,8 @@
+
+@import "../../../../global.scss";
+
 .TestimonialsCardContainer{
-  height: 240px;
+  height: auto;
   border: 2px solid #F2F2F2;
   width: 27vw;
   border-radius: 5px;
@@ -10,7 +13,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  @media only screen and (max-width: 768px) {
+  @include phone {
     /* For mobile phones: */
     width: 100%;
   }
