--- a/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
+++ b/src/screens/HomeScreen/recentWorkComponent/styles.module.scss
@@ -21,8 +21,9 @@
 .recentWorkCardsContainer {
   width: 90%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: row;
+  flex-wrap: wrap;
   @include phone {
     /* For mobile phones: */
     width: 100%;
